tests/ui/suggestions/issue-83892.stderr
error[E0308]: mismatched types
  --> $DIR/issue-83892.rs:9:15
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     match () {
LL |         () => func()
   |               ^^^^^^ expected `()`, found `u8`
LL |     }
   |      - help: consider using a semicolon here: `;`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
