tests/ui/suggestions/issue-83892.rs
//@ run-rustfix

fn func() -> u8 {
    0
}

fn main() {
    match () {
        () => func() //~ ERROR mismatched types
    }
}
